--- a/roles/provision/libvirt/defaults/main.yml
+++ b/roles/provision/libvirt/defaults/main.yml
@@ -2,6 +2,8 @@
 cluster_hosts:
   - {name: passimian }
 
+cluster_domain: home.younglogic.net
+
 source_image_file: rhel-server-7.5-x86_64-kvm.qcow2
 source_image_dir: /home/ayoung/Downloads
 target_image_dir: /var/lib/libvirt/images
