--- a/roles/provision/libvirt/tasks/create.yml
+++ b/roles/provision/libvirt/tasks/create.yml
@@ -24,8 +24,11 @@
     mode: u=rw,g=r,o=r
 
 - template:
-    src: ifcfg-eth1.j2
-    dest: '{{ hypervisor_keystore_dir }}/ifcfg-eth1'
+    src: "ifcfg-eth{{ item }}.j2"
+    dest: '{{ hypervisor_keystore_dir }}/ifcfg-eth{{ item }}'
+  with_items:
+  - 1
+  - 2
 
 
 
@@ -38,13 +41,13 @@
 
 
 - name: add cloud-user and keys
-  command:  virt-customize -a {{ target_image_dir }}/{{ item.name }}.qcow2 --run-command  'id -u cloud-user &>/dev/null || /usr/sbin/useradd -u 1000 cloud-user'  --ssh-inject cloud-user:file:/tmp/authorized_keys   --copy-in {{ hypervisor_keystore_dir }}/ifcfg-eth1:/etc/sysconfig/network-scripts  --selinux-relabel
+  command:  virt-customize -a {{ target_image_dir }}/{{ item.name }}.qcow2 --run-command  'id -u cloud-user &>/dev/null || /usr/sbin/useradd -u 1000 cloud-user'  --ssh-inject cloud-user:file:/tmp/authorized_keys   --hostname {{ item.name }}.{{ cluster_domain }}  --copy-in {{ hypervisor_keystore_dir }}/ifcfg-eth1:/etc/sysconfig/network-scripts --copy-in {{ hypervisor_keystore_dir }}/ifcfg-eth2:/etc/sysconfig/network-scripts  --selinux-relabel --root-password password:FreeIPA4All
   with_items: "{{ cluster_hosts }}"
 
 
 - name: define vm
   virt:
-      name: "{{ item.name }}"
+      name: "{{ item.name }}.{{ cluster_domain }}"
       command: define
       xml: "{{ lookup('template', 'vm.xml.j2') }}"
       uri:  qemu:///session
@@ -52,7 +55,7 @@
 
 - name: run vm
   virt:
-      name: "{{ item.name }}"
+      name: "{{ item.name }}.{{ cluster_domain }}"
       uri:  qemu:///session
       state: running
   with_items: "{{ cluster_hosts }}"
