Libvirt and Azure provisioning cleanup, TripleO setup

--- a/roles/provision/azure/tasks/main.yml
+++ b/roles/provision/azure/tasks/main.yml
@@ -84,7 +84,7 @@
     --availability-set {{ az_av_set }} \
     --nics "{{ item.name }}.nic" \
     --admin-username cloud-user \
-    --generate-ssh-keys
+    --ssh-key-value "{{ pubkey }}"
   with_items: "{{ cluster_hosts }}"
   register: osservers
 
