--- a/roles/tripleo/files/undercloud.conf
+++ b/roles/tripleo/files/undercloud.conf
@@ -8,8 +8,10 @@ local_ip = 10.127.0.1/24
 undercloud_public_host = passimian.home.younglogic.net
 undercloud_admin_host = passimian.home.younglogic.net
 undercloud_service_certificate =
-generate_service_certificate = False
+generate_service_certificate = True
 scheduler_max_attempts = 10
+certificate_generation_ca = local
+
 
 # Deprecated names for compatibility with older releases
 discovery_iprange = 10.127.0.128,10.127.0.139
@@ -20,7 +22,7 @@ dhcp_start = 10.127.0.64
 dhcp_end = 10.127.0.75
 inspection_iprange = 10.127.0.128,10.127.0.139
 network_gateway = 10.127.0.1
-masquerade_network = 10.127.0.3/24
+masquerade_network = 10.127.0.2/24
 # End of deprecated names
 
 [ctlplane-subnet]
@@ -30,3 +32,4 @@ dhcp_start = 10.127.0.64
 dhcp_end = 10.127.0.75
 inspection_iprange = 10.127.0.128,10.127.0.139
 masquerade = true
+
