Updated undercloud.conf for certs

--- a/roles/tripleo/files/undercloud.conf
+++ b/roles/tripleo/files/undercloud.conf
@@ -11,6 +11,8 @@ undercloud_service_certificate =
 generate_service_certificate = True
 scheduler_max_attempts = 10
 certificate_generation_ca = local
+enable_node_discovery = True
+discovery_default_driver = ipmi
 
 
 # Deprecated names for compatibility with older releases
