split teardown from provision in libvirt

--- a/playbooks/openstack-teardown.yml
+++ b/playbooks/openstack-teardown.yml
@@ -1,8 +1,5 @@
 ---
 
 - hosts: localhost
-  vars:
-    teardown: true
-    teardown_network: false
   roles:
-    -  provision/openstack
+    -  teardown/openstack
