--- a/roles/provision/openstack/tasks/create.yml
+++ b/roles/provision/openstack/tasks/create.yml
@@ -49,7 +49,7 @@
   os_server:
     cloud: "{{ cloudname }}"
     state: present
-    name: "{{ item.name }}"
+    name: "{{ item.name }}.{{ clustername }}"
     image: "{{ image_name }}"
     key_name: "{{ sshkeyname }}"
     timeout: 200
@@ -74,40 +74,3 @@
   with_items: "{{ cluster_hosts }}"
   register: osservers
 
-- file:
-    path: "{{ config_dir }}"
-    state: directory
-    mode: 0755
-
-- file:
-    path: "{{ config_dir }}/deployments"
-    state: directory
-    mode: 0755
-
-- file:
-    path: "{{ cluster_dir }}"
-    state: directory
-    mode: 0755
-
-- template:
-    src: inventory.ini.j2
-    dest: "{{ cluster_dir }}/inventory.ini"
-    force: yes
-    backup: no
-
-- name: create openshift var volume
-  os_volume:
-    cloud: "{{ cloudname }}"
-    size: 40
-    display_name: "{{ item.volume_name }}"
-  register: openshift_var_volume
-  with_items: "{{ cluster_volumes }}"
-
-- name: attach var volume to OCE Master
-  os_server_volume:
-    cloud: "{{ cloudname }}"
-    state: present
-    server: "{{ item.server_name }}.{{ clustername }}"
-    volume:  "{{ item.volume_name }}"
-    device: /dev/vdb
-  with_items: "{{ cluster_volumes }}"
